# telecom_test

./: Cargo.toml  README.md
src/: lib.rs  main.rs  provider.rs  repo.rs
