[package]
name = "telecom"
version = "0.1.0"
authors = ["Mikhail Katychev <mkatych@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1"
serde = { version = "1.0", features = ["derive"] }
rouille = "3.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.7"
